[package]
name = "bragi_tester"
version = "0.1.0"
authors = ["riendegris <matt@area403.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.2.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.10.6", features = ["blocking", "json"] }
jq-rs = "0.4.1"
urlencoding = "1.0"
url = "2.1.1"
snafu = "0.6"
