[package]
name = "bragi_tester"
version = "0.1.0"
authors = ["riendegris <matt@area403.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "2.33.1"
jq-rs = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "0.6"
tokio = "0.2.21"
reqwest = { version = "0.10.6", features = ["blocking", "json"] }
url = "2.1.1"
urlencoding = "1.0"
