[package]
name = "bragi_elasticsearch_probe"
version = "0.1.0"
authors = ["riendegris <matt@area403.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "2.33.1"
futures = "0.3"
jq-rs = "0.4.1"
juniper = { git="https://github.com/graphql-rust/juniper.git", features = ["chrono"] }
juniper_subscriptions = { git="https://github.com/graphql-rust/juniper.git" }
juniper_warp = { git="https://github.com/graphql-rust/juniper.git", features = ["subscriptions"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog = "2.5"
slog-term = "2.5"
slog-async = "2.5"
snafu = "0.6"
reqwest = { version = "0.10.6", features = ["blocking", "json"] }
tokio = { version = "0.2.13", features = [ "sync", "rt-core", "macros", "stream", "fs" ] }
url = "2.1.1"
urlencoding = "1.0"
warp = { version = "0.2.3" }

[lib]
name = "besp"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"
